Correção referência do topo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <reader id="cabecalho">
         <nav class="navegation">
-            <a class="nome" href="#hugo"><strong>Hugo Costa</strong></a>
+            <a class="nome" href="#minhafoto"><strong>Hugo Costa</strong></a>
             <a class="experi" href="#experiencia">Experiência</a>
             <a class="forma" href="#formacao">Formação</a>
             <a class="habili" href="#habilidades">Habilidades</a>
@@ -23,8 +23,6 @@
         <img src="/Imagens/predios3.jpg" alt="Imagem de Fundo com Prédios comerciais" ;>
 
     </div>
-
-    
 
     <section class="foto-info">
 
