--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" lang=”pt-br”>
     <title>Hugo Costa - Portifólio</title>
     <link rel="stylesheet" type="text/css" href="style.css">  
     
