Corrigindo erros - tentativa 2

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang=”pt-br”>
 
 <head>
-    <meta charset="utf-8" lang=”pt-br”>
+    <meta charset="utf-8">
     <title>Hugo Costa - Portifólio</title>
     <link rel="stylesheet" type="text/css" href="style.css">  
     
@@ -23,6 +23,8 @@
         <img src="/Imagens/predios3.jpg" alt="Imagem de Fundo com Prédios comerciais" ;>
 
     </div>
+
+    
 
     <section class="foto-info">
 
