--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang=”pt-br”>
+<html>
 
 <head>
     <meta charset="utf-8">
-    <title>Hugo Costa - Portifólio</title>
+    <title>Hugo Costa | Portifólio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" media="all">
     <link rel="stylesheet" type="text/css" href="style.css">  
     
